--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@200;300;400;500;600&family=Work+Sans:wght@200;300;400;500;600&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #dddddd;
+  font-family: 'Barlow', sans-serif;
+  font-size: 16px;
+}
+
+h1 {
+  margin-bottom: 12px;
+}
+
+.card {
+  width: 400px;
+  margin: 25px auto;
+  border: 3px solid #222;
+  border-radius: 10px;
+  box-shadow: 0 0 25px rgba(32, 32, 32, 0.432);
+  background-color: rgb(221, 221, 221);
+}
+
+.avatar {
+  width: 100%;
+  display: block;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.data {
+  padding: 1.5rem;
+  padding-top: 20px;
+  font-size: 0.9rem;
+}
+
+.data p {
+  font-family: 'JetBrains Mono', monospace;
+  
+}
+
+.skill-list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-top: 16px;
+}
+
+.skill {
+  padding: 5px 15px;
+  border-radius: 7px;
+  color: white;
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 0.8rem;
 }
